Clean repository structure and harden CI checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,6 @@ jobs:
 
       - name: Build Worker image
         run: docker build -f docker/Dockerfile.worker .
+
+      - name: Build UI image
+        run: docker build -f docker/Dockerfile.ui .
